# ising-model

./: Cargo.toml  README.md  ising_correlation_1000x1000.csv  pyproject.toml
data/: ising_correlation_100x100_N50000.csv  ising_correlation_2000x2000.csv  ising_correlation_200x200_N10000.csv  ising_correlation_200x200_N5000.csv  ising_correlation_500x500.csv  temp_correlation_1000x1000.csv  temp_correlation_100x100.csv  temp_correlation_2000x2000.csv  temp_correlation_200x200.csv  temp_correlation_500x500.csv
src/: lib.rs
src/ising_rust/: __init__.py  _core.pyi  main.py  plotter.py
