[project]
name = "ising-rust"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "gkerr_laptop", email = "gavin.kerr@dal.ca" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "scipy>=1.17.0",
]

[project.scripts]
ising-rust = "ising_rust:main"

[tool.maturin]
module-name = "ising_rust._core"
python-packages = ["ising_rust"]
python-source = "src"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
